modules/web-app-module/compute.tf

resource "aws_instance" "instance_1" {
  ami             = var.ami
  instance_type   = var.instance_type
  security_groups = [aws_security_group.instances.name]
  user_data       = <<-EOF
            #!/bin/bash
            echo "Hello, World 1" > index.html
            python3 -m http.server 8080 &
            EOF

  tags = {
    Name = "${var.environment_name}.${var.app_name}.1"
  }
}

resource "aws_instance" "instance_2" {
  ami             = var.ami
  instance_type   = var.instance_type
  security_groups = [aws_security_group.instances.name]
  user_data       = <<-EOF
          #!/bin/bash
          echo "Hello, World 2" > index.html
          python3 -m http.server 8080 &
          EOF
  tags = {
    Name = "${var.environment_name}.${var.app_name}.1"
  }
}
